--- a/ecnu_site/public/mystyle.css
+++ b/ecnu_site/public/mystyle.css
@@ -134,6 +134,14 @@ input[value="热度"] {
     cursor: pointer;            /* 当光标移动到按钮上方，光标变为指针状 */
 }
 
+/* 卡片和表格的容器 */
+.container {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 /* 表格 */
 table {
     width: 100%;
